kubernetes/apps/unifi/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  namespace: unifi
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-unifi
  hostnames:
    - unifi.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
